--- a/app/src/main/res/drawable/button_pressed.xml
+++ b/app/src/main/res/drawable/button_pressed.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ff33b5e5"/>
+    <solid android:color="#C8BB95"/>
 
-    <corners android:radius="99dp"/>
+    <corners android:radius="10dp"/>
 
     <stroke
         android:color="#ffffff"
