--- a/app/src/main/res/layout/fragment_create_top.xml
+++ b/app/src/main/res/layout/fragment_create_top.xml
@@ -29,15 +29,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" /> -->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="537dp"
-        android:layout_height="318dp"
-        android:background="@drawable/book1"
+    <FrameLayout
+        android:id="@+id/gura"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:background="@drawable/book1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:background="@drawable/gradation" />
+
+    </FrameLayout>
 
     <com.example.bookshelf.mlkit.GraphicOverlay
         android:id="@+id/graphic_overlay"
@@ -53,23 +69,23 @@
         android:id="@+id/button_self"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="80dp"
-        android:text="手動で登録"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/button_state2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:text="手動で登録"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button_barcode"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="80dp"
-        android:text="バーコードで登録"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/button_state2"
-        app:layout_constraintStart_toEndOf="@+id/button_self"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:text="バーコードで登録"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <include
         android:id="@+id/settings_button"
