--- a/app/src/main/res/menu/home_navigation_menu.xml
+++ b/app/src/main/res/menu/home_navigation_menu.xml
@@ -12,4 +12,8 @@
         android:id="@+id/nav_slideshow"
         android:icon="@drawable/ic_menu_slideshow"
         android:title="検索"/>
+    <item
+        android:id="@+id/nav_clear"
+        android:icon="@drawable/ic_menu_slideshow"
+        android:title="クリア"/>
 </menu>
